--- a/package.json
+++ b/package.json
@@ -33,17 +33,27 @@
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.16",
+    "@heroicons/vue": "^2.0.18",
     "@nuxt/kit": "^3.9.3",
     "@tailvue/nuxt": "^1.0.0",
+    "@tiptap/extension-image": "^2.10.2",
+    "@tiptap/extension-link": "^2.10.0",
+    "@tiptap/pm": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
+    "@tiptap/vue-3": "^2.0.3",
     "@vueuse/core": "^13.2.0",
     "axios": "^1.9.0",
     "defu": "^6.1.4",
+    "formidable": "^3.5.4",
     "lodash": "^4.17.21",
+    "nanoid": "^5.1.5",
     "nuxt-icon": "^1.0.0-beta.7",
     "nuxt-tailvue": "^1.0.95",
     "nuxt-tv-toast": "^1.0.5",
     "pinia": "^3.0.2",
     "sass": "^1.81.0",
+    "sharp": "^0.34.2",
     "tailwindcss": "^3.4.15",
     "vue-sweetalert2": "^5.0.5",
     "xlsx": "^0.18.5"
