--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
+    "@alireza-ab/vue3-persian-datepicker": "^1.0.5",
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
     "@nuxt/kit": "^3.9.3",
@@ -46,6 +47,7 @@
     "axios": "^1.9.0",
     "defu": "^6.1.4",
     "formidable": "^3.5.4",
+    "imask": "^7.6.1",
     "lodash": "^4.17.21",
     "nanoid": "^5.1.5",
     "nuxt-icon": "^1.0.0-beta.7",
@@ -55,6 +57,7 @@
     "sass": "^1.81.0",
     "sharp": "^0.34.2",
     "tailwindcss": "^3.4.15",
+    "vue-imask": "^7.6.1",
     "vue-sweetalert2": "^5.0.5",
     "xlsx": "^0.18.5"
   },
