--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "tailwindcss": "^3.4.15",
     "vue-imask": "^7.6.1",
     "vue-sweetalert2": "^5.0.5",
+    "vue3-slide-up-down": "^2.1.0",
+    "vuedraggable": "^4.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
