--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
     "@nuxt/kit": "^3.9.3",
+    "@pinia/nuxt": "^0.11.1",
+    "@prisma/client": "^6.9.0",
     "@tailvue/nuxt": "^1.0.0",
     "@tiptap/extension-image": "^2.10.2",
     "@tiptap/extension-link": "^2.10.0",
@@ -45,6 +47,7 @@
     "@tiptap/vue-3": "^2.0.3",
     "@vueuse/core": "^13.2.0",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "defu": "^6.1.4",
     "formidable": "^3.5.4",
     "imask": "^7.6.1",
@@ -57,6 +60,7 @@
     "sass": "^1.81.0",
     "sharp": "^0.34.2",
     "tailwindcss": "^3.4.15",
+    "ua-parser-js": "^2.0.3",
     "vue-imask": "^7.6.1",
     "vue-sweetalert2": "^5.0.5",
     "vue3-slide-up-down": "^2.1.0",
@@ -73,6 +77,7 @@
     "@types/node": "^20.11.19",
     "changelogen": "^0.5.5",
     "nuxt": "^3.9.3",
+    "prisma": "^6.9.0",
     "typescript": "~5.8.3",
     "vitest": "^3.1.4",
     "vue-tsc": "^2.2.10"
