--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "date-fns": "^4.1.0",
     "defu": "^6.1.4",
     "formidable": "^3.5.4",
+    "html2canvas": "^1.4.1",
     "imask": "^7.6.1",
     "lodash": "^4.17.21",
     "nanoid": "^5.1.5",
