--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@tiptap/starter-kit": "^2.0.3",
     "@tiptap/vue-3": "^2.0.3",
     "@vueuse/core": "^13.2.0",
+    "apexcharts": "^5.3.1",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "defu": "^6.1.4",
@@ -62,6 +63,8 @@
     "ua-parser-js": "^2.0.3",
     "vue-imask": "^7.6.1",
     "vue-sweetalert2": "^5.0.5",
+    "vue3-apexcharts": "^1.8.0",
+    "vue3-grid-layout": "^1.0.0",
     "vue3-slide-up-down": "^2.1.0",
     "vuedraggable": "^4.1.0",
     "xlsx": "^0.18.5"
@@ -72,7 +75,7 @@
     "@nuxt/module-builder": "^1.0.1",
     "@nuxt/schema": "^3.9.3",
     "@nuxt/test-utils": "^3.11.0",
-    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@nuxtjs/tailwindcss": "^3.3.4",
     "@prisma/client": "^6.12.0",
     "@types/node": "^20.11.19",
     "changelogen": "^0.5.5",
