--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
-    "@alireza-ab/vue3-persian-datepicker": "^1.0.5",
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
     "@nuxt/kit": "^3.9.3",
@@ -53,6 +52,8 @@
     "html2canvas": "^1.4.1",
     "imask": "^7.6.1",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
+    "moment-jalaali": "^0.10.4",
     "nanoid": "^5.1.5",
     "nuxt-tailvue": "^1.0.95",
     "nuxt-tv-toast": "^1.0.5",
@@ -65,6 +66,7 @@
     "vue-sweetalert2": "^5.0.5",
     "vue3-apexcharts": "^1.8.0",
     "vue3-grid-layout": "^1.0.0",
+    "vue3-persian-datetime-picker": "^1.2.2",
     "vue3-slide-up-down": "^2.1.0",
     "vuedraggable": "^4.1.0",
     "xlsx": "^0.18.5"
