--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tailvue/nuxt": "^1.0.0",
     "@tiptap/extension-image": "^2.10.2",
     "@tiptap/extension-link": "^2.10.0",
+    "@tiptap/extension-placeholder": "^3.6.5",
     "@tiptap/pm": "^2.0.3",
     "@tiptap/starter-kit": "^2.0.3",
     "@tiptap/vue-3": "^2.0.3",
