--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "vorna-panel",
   "version": "1.0.0",
-  "description": "My new Nuxt module",
-  "repository": "your-org/my-module",
+  "description": "A Nuxt 4 module for Vorna Company to simplify and accelerate building Persian-language admin panels.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sbajam/vorna-panel.git"
+  },
   "license": "MIT",
+  "author": "Saba Jamshidi",
   "type": "module",
   "exports": {
     ".": {
@@ -22,30 +26,73 @@
   "files": [
     "dist"
   ],
+  "sideEffects": false,
+  "build": {
+    "rollup": {
+      "external": [
+        "execa",
+        "@prisma/client",
+        "cross-spawn",
+        "strip-final-newline",
+        "npm-run-path",
+        "onetime",
+        "human-signals",
+        "is-stream",
+        "get-stream",
+        "merge-stream",
+        "signal-exit",
+        "path-key",
+        "mimic-fn",
+        "#main-entry-point",
+        "@prisma/client/runtime/library.js",
+        "which",
+        "shebang-command",
+        "isexe",
+        "shebang-regex"
+      ]
+    }
+  },
   "scripts": {
-    "prepack": "nuxt-module-build build",
+    "prepack": "nuxt-module-build build --failOnWarn=false",
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
-    "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
+    "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish --access public && git push --follow-tags",
     "test": "vitest run",
     "test:watch": "vitest watch",
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
+  },
+  "keywords": [
+    "nuxt",
+    "nuxt4",
+    "module",
+    "admin-panel",
+    "dashboard",
+    "persian",
+    "rtl",
+    "vorna"
+  ],
+  "bugs": {
+    "url": "https://github.com/sbajam/vorna-panel/issues"
+  },
+  "homepage": "https://github.com/sbajam/vorna-panel#readme",
+  "publishConfig": {
+    "access": "public"
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.9.0",
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
-    "@nuxt/kit": "^3.9.3",
+    "@nuxt/kit": "^4.1.3",
     "@pinia/nuxt": "^0.11.1",
     "@tailvue/nuxt": "^1.0.0",
-    "@tiptap/extension-image": "^2.10.2",
-    "@tiptap/extension-link": "^2.10.0",
-    "@tiptap/extension-placeholder": "^3.6.5",
-    "@tiptap/pm": "^2.0.3",
-    "@tiptap/starter-kit": "^2.0.3",
-    "@tiptap/vue-3": "^2.0.3",
-    "@vueuse/core": "^13.2.0",
+    "@tiptap/core": "^3.6.6",
+    "@tiptap/extension-code": "^3.6.6",
+    "@tiptap/extension-image": "^3.6.6",
+    "@tiptap/extension-link": "^3.6.6",
+    "@tiptap/extension-placeholder": "^3.6.6",
+    "@tiptap/extension-text": "^3.6.6",
+    "@tiptap/pm": "^3.6.6",
     "apexcharts": "^5.3.1",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
@@ -54,6 +101,7 @@
     "html2canvas": "^1.4.1",
     "imask": "^7.6.1",
     "lodash": "^4.17.21",
+    "mkdist": "^2.4.1",
     "moment": "^2.30.1",
     "moment-jalaali": "^0.10.4",
     "multi-range-slider-vue": "^1.1.4",
@@ -63,7 +111,7 @@
     "pinia": "^3.0.2",
     "sass": "^1.81.0",
     "sharp": "^0.34.2",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^4.1.14",
     "ua-parser-js": "^2.0.3",
     "vue-imask": "^7.6.1",
     "vue-sweetalert2": "^5.0.5",
@@ -71,23 +119,28 @@
     "vue3-grid-layout": "^1.0.0",
     "vue3-persian-datetime-picker": "^1.2.2",
     "vue3-slide-up-down": "^2.1.0",
-    "vuedraggable": "^4.1.0",
+    "vuedraggable": "^2.24.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@nuxt/devtools": "^2.4.1",
-    "@nuxt/icon": "^1.15.0",
+    "@nuxt/eslint-config": "^1.9.0",
+    "@nuxt/icon": "^2.0.0",
     "@nuxt/module-builder": "^1.0.1",
-    "@nuxt/schema": "^3.9.3",
+    "@nuxt/schema": "^4.1.3",
     "@nuxt/test-utils": "^3.11.0",
-    "@nuxtjs/tailwindcss": "^3.3.4",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "@prisma/client": "^6.12.0",
-    "@types/node": "^20.11.19",
-    "changelogen": "^0.5.5",
-    "nuxt": "^3.9.3",
+    "@types/node": "^24.7.2",
+    "changelogen": "^0.6.2",
+    "eslint": "^9.37.0",
+    "eslint-plugin-vue": "^10.5.0",
+    "nuxt": "^4.1.3",
     "prisma": "^6.12.0",
-    "typescript": "~5.8.3",
+    "typescript": "^5.9.3",
     "vitest": "^3.1.4",
-    "vue-tsc": "^2.2.10"
+    "vue-loader": "^17.4.2",
+    "vue-template-compiler": "^2.7.16",
+    "vue-tsc": "^3.1.1"
   }
 }
