--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "resolveJsonModule": true,
     "types": ["node", "vue"]
   },
-  "include": ["**/*.ts", "**/*.d.ts", "**/*.vue"],
+  "include": ["**/*.ts", "**/*.d.ts", "**/*.vue", "src/runtime/server/api/auth/login.post.js", "src/runtime/server/api/auth/refresh.post.js"],
   "exclude": ["node_modules"]
 }
