--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vorna-panel",
-  "version": "1.1.11",
+  "version": "1.1.27",
   "description": "A Nuxt 4 module for Vorna Company to simplify and accelerate building Persian-language admin panels.",
   "repository": {
     "type": "git",
@@ -103,6 +103,7 @@
     "html2canvas": "^1.4.1",
     "imask": "^7.6.1",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "mkdist": "^2.4.1",
     "moment": "^2.30.1",
     "moment-jalaali": "^0.10.4",
@@ -110,7 +111,7 @@
     "nanoid": "^5.1.5",
     "nuxt-tailvue": "^1.0.95",
     "nuxt-tv-toast": "^1.0.5",
-    "pinia": "^3.0.2",
+    "pinia": "^3.0.3",
     "sass": "^1.81.0",
     "sharp": "^0.34.2",
     "tailwindcss": "^4.1.14",
