--- a/playground/package.json
+++ b/playground/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "@pinia/nuxt": "^0.11.2",
     "@vueuse/core": "^13.2.0",
-    "nuxt": "^4.1.3"
+    "nuxt": "^4.1.3",
+    "pinia": "^3.0.3"
   }
 }
