--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vorna-panel",
-  "version": "1.1.28",
+  "version": "1.1.41",
   "description": "A Nuxt 4 module for Vorna Company to simplify and accelerate building Persian-language admin panels.",
   "repository": {
     "type": "git",
@@ -58,6 +58,7 @@
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
     "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish --access public && git push --follow-tags",
+    "publish": " npm publish --access public",
     "test": "vitest run",
     "test:watch": "vitest watch",
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
@@ -83,7 +84,6 @@
     "@formkit/auto-animate": "^0.9.0",
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
-    "@nuxt/kit": "^4.1.3",
     "@pinia/nuxt": "^0.11.1",
     "@tailvue/nuxt": "^1.0.0",
     "@tiptap/core": "^3.6.6",
@@ -129,6 +129,7 @@
     "@nuxt/devtools": "^2.4.1",
     "@nuxt/eslint-config": "^1.9.0",
     "@nuxt/icon": "^2.0.0",
+    "@nuxt/kit": "^4.1.3",
     "@nuxt/module-builder": "^1.0.1",
     "@nuxt/schema": "^4.1.3",
     "@nuxt/test-utils": "^3.11.0",
