--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vorna-panel",
-  "version": "1.1.41",
+  "version": "1.2.1",
   "description": "A Nuxt 4 module for Vorna Company to simplify and accelerate building Persian-language admin panels.",
   "repository": {
     "type": "git",
@@ -58,7 +58,6 @@
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
     "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish --access public && git push --follow-tags",
-    "publish": " npm publish --access public",
     "test": "vitest run",
     "test:watch": "vitest watch",
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
@@ -123,7 +122,7 @@
     "vue3-persian-datetime-picker": "^1.2.2",
     "vue3-slide-up-down": "^2.1.0",
     "vuedraggable": "^2.24.3",
-    "xlsx": "^0.18.5"
+    "xlsx-js-style": "^1.2.0"
   },
   "devDependencies": {
     "@nuxt/devtools": "^2.4.1",
@@ -144,7 +143,7 @@
     "typescript": "^5.9.3",
     "vitest": "^3.1.4",
     "vue-loader": "^17.4.2",
-    "vue-template-compiler": "^2.7.16",
+    "vue-template-compiler": "^0.1.0",
     "vue-tsc": "^3.1.1"
   }
 }
