--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vorna-panel",
-  "version": "1.2.1",
+  "version": "1.2.3",
   "description": "A Nuxt 4 module for Vorna Company to simplify and accelerate building Persian-language admin panels.",
   "repository": {
     "type": "git",
@@ -98,6 +98,7 @@
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "defu": "^6.1.4",
+    "exceljs": "^4.4.0",
     "formidable": "^3.5.4",
     "html2canvas": "^1.4.1",
     "imask": "^7.6.1",
@@ -121,8 +122,7 @@
     "vue3-grid-layout": "^1.0.0",
     "vue3-persian-datetime-picker": "^1.2.2",
     "vue3-slide-up-down": "^2.1.0",
-    "vuedraggable": "^2.24.3",
-    "xlsx-js-style": "^1.2.0"
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@nuxt/devtools": "^2.4.1",
